--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ body {
     align-items: center;
 }
 
+.link {
+    color: white;
+    text-decoration: none;
+}
+
 .cabecera {
     display: flex;
     padding: 30px 200px;
@@ -123,9 +128,12 @@ button {
 
 .pie_pagina {
     background-color: #E5E7EB;
-    font-size: 36px;
+    font-size: 16px;
     font-style: italic;
-    color:#1F2937;
+    color: #E5E7EB;
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
 }
 
 .llamada_a_la_accion {
