--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,7 +48,7 @@ header {
 	color: #F9FAF8;
 }
 
-main {
+.first-block{
 	display: flex;
 }
 
@@ -86,7 +86,7 @@ h1 + p {
 .after-header .right {
 	flex-basis: 500px;
 	height: 220px;
-	background-color:dimgray;
+	background-color:rgb(134, 132, 132);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -108,3 +108,40 @@ h1 + p {
 	font-size: 18px;
 	text-decoration-line: none;
 }
+
+.second-block {
+  padding-bottom: 100px;
+}
+
+.second-block > h2 {
+  font-size: 36px;
+  font-weight: bold;
+  color: #1F2937;
+  justify-content: space-between;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.information-content {
+  display: flex;
+  column-gap: 50px;
+  margin-left: 200px;
+  margin-right: 200px;
+}
+
+.information-content .image {
+  width: 150px;
+  height: 150px;
+  border: 3px solid rgb(0, 140, 255);
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 8px;
+}
+
+.information-content figcaption {
+  text-align: center;
+  color:rgb(51, 50, 50)
+}
+
+
