--- a/styles/styles.css
+++ b/styles/styles.css
@@ -93,7 +93,7 @@ h1 + p {
 	margin-right: 100px;
 }
 
-.button {
+.first-block .button {
 	background-color: #3882F6;
 	width: 8em;
 	text-align: center;
@@ -102,7 +102,7 @@ h1 + p {
 	border-radius: 10px;
 }
 
-.button a {
+.first-block .button a {
 	color: #F9FAF8;
 	font-weight: bold;
 	font-size: 18px;
@@ -144,4 +144,98 @@ h1 + p {
   color:rgb(51, 50, 50)
 }
 
+.third-block {
+  display: flex;
+  flex-direction: column;
+  background-color: #E5E7EB;
+  padding-left: 200px;
+  padding-right: 100px;
+  padding-top: 80px;
+  padding-bottom: 100px;
+}
+
+.third-block p:first-child {
+  font-size: 36px;
+  font-style: italic;
+  color: #1F2937;
+}
+
+.third-block p:last-child {
+  font-size: 24px;
+  font-weight: bold;
+  margin-left: auto;
+}
+
+.fourth-block {
+  display: flex;
+  justify-content: center;
+  padding-top: 80px;
+  padding-bottom: 100px;
+}
+
+.fourth-block > div {
+  display: flex;
+  column-gap: 100px;
+  background-color: #3882F6;
+  border-radius: 10px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+.call-to-action {
+  display: flex;
+  flex-direction: column;
+}
+
+.call-to-action p:first-child {
+  color: #E5E7EB;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 3px;
+}
+
+.call-to-action p:last-child {
+  color: #E5E7EB;
+  font-size: 18px;
+  justify-content: center;
+  margin-top: 3px;
+}
+
+.fourth-block .button {
+	display: flex;
+  height: 40px;
+  width: 8em;
+  margin-top: 35px;
+	justify-content: center;
+  align-items: center;
+	padding-top: 10px;
+	padding-bottom: 10px;
+  border-style: solid;
+  border-width: 2px;
+	border-radius: 10px;
+  border-color: #F9FAF8;
+  
+}
+
+.fourth-block .button a {
+	color: #F9FAF8;
+	font-weight: bold;
+	font-size: 18px;
+	text-decoration-line: none;
+}
+
+.fifth-block {
+  display: flex;
+  justify-content: center;
+  background-color: #1F2937;
+	color: #F9FAF8;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.fifth-block > p {
+  font-size: 18px;
+}
 
